# figureTest

./: CMakeLists.txt  README  build.sh  cFigure.cpp  cFigure.h  cRealFigures.cpp  cRealFigures.h  figures.pro  fileWithData  main.cpp
